@@ -1252,10 +1252,6 @@ BABYCART_PATH = /usr/local/bin/babycart
 ; http://edgar.netflint.net/howto.php
 ;MY_JABBER_ID =
 
-; PhpWeather needs this external php project
-; http://sourceforge.net/projects/phpweather/
-;PHPWEATHER_BASE_DIR =
-
 ;===========================================================================
 ; Part Eight: PLUGINCACHED Pear/Cache Settings
 ;===========================================================================
