@@ -153,6 +153,279 @@ ${POT_FILE}: .././lib/pear/DB/sybase.php
 ${POT_FILE}: .././lib/pear/File_Passwd.php
 ${POT_FILE}: .././lib/pear/JSON.php
 ${POT_FILE}: .././lib/pear/PEAR.php
+${POT_FILE}: .././lib/phpweather-2.2.2/base_object.php
+${POT_FILE}: .././lib/phpweather-2.2.2/config/connectivity_test.php
+${POT_FILE}: .././lib/phpweather-2.2.2/config/index.php
+${POT_FILE}: .././lib/phpweather-2.2.2/config/make_config.php
+${POT_FILE}: .././lib/phpweather-2.2.2/config/make_db.php
+${POT_FILE}: .././lib/phpweather-2.2.2/config/make_stations.php
+${POT_FILE}: .././lib/phpweather-2.2.2/config/pw_dependency_and.php
+${POT_FILE}: .././lib/phpweather-2.2.2/config/pw_dependency_equal.php
+${POT_FILE}: .././lib/phpweather-2.2.2/config/pw_dependency_not.php
+${POT_FILE}: .././lib/phpweather-2.2.2/config/pw_dependency_or.php
+${POT_FILE}: .././lib/phpweather-2.2.2/config/pw_dependency.php
+${POT_FILE}: .././lib/phpweather-2.2.2/config/pw_option_boolean.php
+${POT_FILE}: .././lib/phpweather-2.2.2/config/pw_optiongroup.php
+${POT_FILE}: .././lib/phpweather-2.2.2/config/pw_option_integer.php
+${POT_FILE}: .././lib/phpweather-2.2.2/config/pw_option_multi_select.php
+${POT_FILE}: .././lib/phpweather-2.2.2/config/pw_option.php
+${POT_FILE}: .././lib/phpweather-2.2.2/config/pw_option_select.php
+${POT_FILE}: .././lib/phpweather-2.2.2/config/pw_option_text.php
+${POT_FILE}: .././lib/phpweather-2.2.2/config/pw_validator_ereg.php
+${POT_FILE}: .././lib/phpweather-2.2.2/config/pw_validator.php
+${POT_FILE}: .././lib/phpweather-2.2.2/config/pw_validator_range.php
+${POT_FILE}: .././lib/phpweather-2.2.2/config/reset_session.php
+${POT_FILE}: .././lib/phpweather-2.2.2/config/speed_test.php
+${POT_FILE}: .././lib/phpweather-2.2.2/currentimage.php
+${POT_FILE}: .././lib/phpweather-2.2.2/data_retrieval.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/AE.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/AF.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/AG.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/AL.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/AM.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/AN.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/AO.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/AQ.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/AR.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/AT.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/AU.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/AW.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/AZ.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/BA.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/BB.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/BD.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/BE.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/BF.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/BG.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/BH.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/BI.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/BJ.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/BM.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/BN.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/BO.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/BR.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/BS.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/BW.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/BY.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/BZ.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/CA.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/CD.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/CF.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/CG.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/CH.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/CI.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/CK.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/CL.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/CM.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/CN.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/CO.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/countries.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/CR.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/CU.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/CV.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/CX.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/CY.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/CZ.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/DE.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/DJ.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/DK.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/DM.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/DO.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/DZ.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/EC.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/EE.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/EG.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/EH.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/ES.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/ET.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/FI.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/FJ.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/FK.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/FM.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/FR.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/GA.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/GB.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/GD.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/GE.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/GF.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/GH.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/GI.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/GL.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/GM.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/GN.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/GP.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/GQ.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/GR.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/GS.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/GT.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/GW.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/GY.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/HK.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/HN.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/HR.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/HT.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/HU.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/ID.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/IE.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/IL.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/IN.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/IO.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/IQ.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/IR.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/IS.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/IT.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/JM.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/JO.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/JP.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/KE.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/KH.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/KI.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/KM.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/KN.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/KP.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/KR.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/KW.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/KY.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/KZ.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/LA.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/LB.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/LC.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/LK.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/LR.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/LS.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/LT.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/LU.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/LV.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/LY.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/MA.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/MD.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/MG.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/MH.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/MK.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/ML.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/MM.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/MO.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/MQ.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/MR.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/MT.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/MU.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/MV.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/MW.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/MX.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/MY.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/MZ.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/NA.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/NC.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/NE.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/NG.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/NI.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/NL.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/NO.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/NP.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/NR.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/NZ.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/OM.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/PA.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/PE.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/PF.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/PG.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/PH.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/PK.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/PL.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/PM.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/PR.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/PT.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/PW.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/PY.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/QA.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/RE.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/RO.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/RU.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/RW.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/SA.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/SB.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/SC.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/SD.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/SE.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/SG.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/SH.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/SI.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/SK.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/SL.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/SN.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/SO.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/SR.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/ST.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/SV.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/SY.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/SZ.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/TD.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/TG.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/TH.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/TJ.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/TL.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/TN.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/TO.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/TR.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/TT.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/TV.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/TW.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/TZ.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/UA.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/UG.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/UM.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/US.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/UY.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/UZ.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/VC.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/VE.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/VG.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/VI.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/VN.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/VU.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/WS.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/YE.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/YU.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/ZA.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/ZM.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/files/ZW.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db_layer.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/pw_db_adodb.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/pw_db_common.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/pw_db_dba.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/pw_db_mysql.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/pw_db_null.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db/pw_db_pgsql.php
+${POT_FILE}: .././lib/phpweather-2.2.2/db_updater.php
+${POT_FILE}: .././lib/phpweather-2.2.2/defaults-dist.php
+${POT_FILE}: .././lib/phpweather-2.2.2/images-test.php
+${POT_FILE}: .././lib/phpweather-2.2.2/index.php
+${POT_FILE}: .././lib/phpweather-2.2.2/languages.php
+${POT_FILE}: .././lib/phpweather-2.2.2/output/pw_images.php
+${POT_FILE}: .././lib/phpweather-2.2.2/output/pw_output.php
+${POT_FILE}: .././lib/phpweather-2.2.2/output/pw_text_cs.php
+${POT_FILE}: .././lib/phpweather-2.2.2/output/pw_text_da.php
+${POT_FILE}: .././lib/phpweather-2.2.2/output/pw_text_de.php
+${POT_FILE}: .././lib/phpweather-2.2.2/output/pw_text_en_GB.php
+${POT_FILE}: .././lib/phpweather-2.2.2/output/pw_text_en.php
+${POT_FILE}: .././lib/phpweather-2.2.2/output/pw_text_en_US.php
+${POT_FILE}: .././lib/phpweather-2.2.2/output/pw_text_es.php
+${POT_FILE}: .././lib/phpweather-2.2.2/output/pw_text_fi.php
+${POT_FILE}: .././lib/phpweather-2.2.2/output/pw_text_fr.php
+${POT_FILE}: .././lib/phpweather-2.2.2/output/pw_text_hu.php
+${POT_FILE}: .././lib/phpweather-2.2.2/output/pw_text_it.php
+${POT_FILE}: .././lib/phpweather-2.2.2/output/pw_text_nl.php
+${POT_FILE}: .././lib/phpweather-2.2.2/output/pw_text_no.php
+${POT_FILE}: .././lib/phpweather-2.2.2/output/pw_text.php
+${POT_FILE}: .././lib/phpweather-2.2.2/output/pw_text_pl.php
+${POT_FILE}: .././lib/phpweather-2.2.2/output/pw_text_pt.php
+${POT_FILE}: .././lib/phpweather-2.2.2/output/pw_text_sk.php
+${POT_FILE}: .././lib/phpweather-2.2.2/output/pw_text_sv.php
+${POT_FILE}: .././lib/phpweather-2.2.2/output/pw_text_tr.php
+${POT_FILE}: .././lib/phpweather-2.2.2/phpweather.php
+${POT_FILE}: .././lib/phpweather-2.2.2/pw_utilities.php
+${POT_FILE}: .././lib/phpweather-2.2.2/test2.php
+${POT_FILE}: .././lib/phpweather-2.2.2/test.php
 ${POT_FILE}: .././lib/plugin/AddComment.php
 ${POT_FILE}: .././lib/plugin/AllPages.php
 ${POT_FILE}: .././lib/plugin/AllUsers.php
@@ -333,7 +606,7 @@ ${POT_FILE}: .././lib/WikiDB/backend/PDO_oci8.php
 ${POT_FILE}: .././lib/WikiDB/backend/PDO_pgsql.php
 ${POT_FILE}: .././lib/WikiDB/backend/PDO.php
 ${POT_FILE}: .././lib/WikiDB/backend/PearDB_ffpgsql.php
-${POT_FILE}: .././lib/WikiDB/backend/PearDB_mysql.php
+${POT_FILE}: .././lib/WikiDB/backend/PearDB_mysqli.php
 ${POT_FILE}: .././lib/WikiDB/backend/PearDB_oci8.php
 ${POT_FILE}: .././lib/WikiDB/backend/PearDB_pgsql.php
 ${POT_FILE}: .././lib/WikiDB/backend/PearDB.php
